--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/mrkickling/otherwords#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "striptags": "^3.1.1"
   }
 }
