--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
+    "request": "^2.88.0",
     "socket.io": "^2.3.0",
     "striptags": "^3.1.1"
   }
